--- a/Taskvalorpay/app/src/main/res/layout/activity_userdetails.xml
+++ b/Taskvalorpay/app/src/main/res/layout/activity_userdetails.xml
@@ -13,6 +13,10 @@
         android:background="@color/yellow"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/onactive"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_margin="20dp"
             android:padding="20dp"
@@ -186,7 +190,6 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-
         <ProgressBar
             android:id="@+id/prg"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -195,6 +198,24 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ondeactive"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_inactive"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
